--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     // Room for database
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+    implementation 'com.android.support:design:27.1.1'
+
+    // Paging library for infinite Scroll
+    implementation "android.arch.paging:runtime:1.0.1"
 }
